[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/tilesheet.png" type="Texture" id=1]
[ext_resource path="res://src/actors/generic/Actor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[node name="Actor" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Rays" type="Node2D" parent="."]
position = Vector2( 8, 8 )

[node name="RayR" type="RayCast2D" parent="Rays"]
position = Vector2( 8, 0 )
cast_to = Vector2( 8, 0 )
collide_with_areas = true

[node name="RayL" type="RayCast2D" parent="Rays"]
position = Vector2( -8, 0 )
cast_to = Vector2( -8, 0 )
collide_with_areas = true

[node name="RayU" type="RayCast2D" parent="Rays"]
position = Vector2( 0, -8 )
cast_to = Vector2( 0, -8 )
collide_with_areas = true

[node name="RayD" type="RayCast2D" parent="Rays"]
position = Vector2( 0, 8 )
cast_to = Vector2( 0, 8 )
collide_with_areas = true

[node name="Tween" type="Tween" parent="."]
